css/styles.css
body {
  font-family: "Helvetica Neue","Helvetica", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 500;
  background: #fff;
line-height: 1.6em;
    overflow-x: hidden;
}

.main-text {
  text-align: justify;
}

h2 {
  text-align: right;
  margin-bottom: 0;
  padding-bottom: 0.3em;
  position: relative;
}

.about-header {

}

.h2-asterisk {
    display: none;
}

main {
  margin: 0 auto;
  width: 90%;
  text-align: right;
}

p {
  margin-top: 0.5em;
  text-indent: 1.6em;
}

header {
  margin: 0 auto 70px auto;
    padding-top: 90px;
    padding-right: 5%;
    padding-left: 5%;
}

footer {
  text-align: right;
    padding-right: 5%;
    font-size: .8em;
}

.fixed-nav {
    position: fixed;
    top 0;
    left 0;
    right: 0;
    padding: 4px 0 0 0;
    width: 100%;
    background: rgba(255, 255, 255, .95);
    z-index: 1000;
    text-align: right;
}

.nav-container a {
    position: relative;
}

.nav-container a:hover .asterisk {
    display: inline;
}

.asterisk {
    height: 10px;
    position: absolute;
    left: -13px;
    top: -2px;
    display: none;
}

.img-nav {
    height: 20px;
    margin: 0 0px;
    margin-right: 5%
}

@media (min-width: 769px) {
    
    .fixed-nav {
        left: 0;
        right: 0;
        margin: 0;
        padding: 6px 0 0 0;
    }
    
    .img-nav {
        margin-left: 20px;
    }
    
    header {
        padding-top: 50px;
    }
    
    .container {
        width: 770px;
        margin: 0 auto;
    }
        
    .nav-container {
        width: 760px;
        margin: 0 auto;
    }
    
    .asterisk {
        left: 0;
        height: 15px;
    }
    
    .h2-asterisk {
        position: absolute;
        height: 20px;
        display: inline;
        left: 100%;
        padding-left: 10px;
        padding-top: 3px;
    }
}

@media (min-width: 440px) {
    .main-text {
        width: 380px;
        margin-left: auto;
    }
    
}

